sample/error/gen_alloc-index_diving.bfr
codegen [
  $build {
    a: array(_) {
      i: index;
      x: cell;
    }
  } in

  $dive a@i [
    $alloc {
      j: index;
    } in

    + j:x
  ]
]